--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
-  "dependencies": {
-    "@stencil/core": "~0.16.2",
-    "@stencil/router": "~0.3.1"
-  },
-  "license": "MIT"
+  "dependencies": {},
+  "license": "MIT",
+  "devDependencies": {
+    "@stencil/core": "^0.18.1",
+    "@stencil/sass": "^0.1.1",
+    "@types/jest": "^24.0.11",
+    "@types/puppeteer": "1.11.1",
+    "jest": "23.6.0",
+    "jest-cli": "23.6.0",
+    "puppeteer": "1.11.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rxjs": "^6.4.0",
+    "ts-jest": "^24.0.1",
+    "workbox-build": "3.4.1"
+  }
 }
