--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@firebase/firestore-types": "^1.2.0",
+    "firebase": "^5.10.0"
+  },
   "license": "MIT",
   "devDependencies": {
     "@stencil/core": "^0.18.1",
