--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "serve": "serve www"
   },
   "dependencies": {
-    "firebase": "^5.10.0",
-    "serve": "^11.0.0"
+    "firebase": "^5.10.0"
   },
   "license": "MIT",
   "devDependencies": {
     "@stencil/core": "^0.18.1",
-    "@stencil/sass": "^0.1.1",
+    "@stencil/sass": "^0.2.1",
     "@types/jest": "^24.0.11",
     "@types/puppeteer": "1.11.1",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
-    "puppeteer": "1.11.0",
+    "puppeteer": "^1.15.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rxjs": "^6.4.0",
+    "serve": "^11.0.0",
     "ts-jest": "^24.0.1",
     "workbox-build": "3.4.1"
   }
