--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "stencil build",
     "start": "stencil build --dev --watch --serve",
-    "test": "stencil test --spec --e2e",
+    "test": "stencil test --spec",
+    "e2e": "stencil test --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "serve": "serve www"
   },
@@ -17,15 +18,17 @@
   "devDependencies": {
     "@stencil/core": "^0.18.1",
     "@stencil/sass": "^0.2.1",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "23.3.14",
     "@types/puppeteer": "1.11.1",
+    "expect-puppeteer": "^4.1.1",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
-    "puppeteer": "^1.15.0",
+    "jest-puppeteer": "^4.1.1",
+    "puppeteer": "1.11.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rxjs": "^6.4.0",
     "serve": "^11.0.0",
-    "ts-jest": "^24.0.1",
+    "ts-jest": "^24.0.2",
     "workbox-build": "3.4.1"
   }
 }
